docs/scss/components/_typography.scss
a {
  display: inline-block;
  line-height: 1.5;
  border-bottom: 1px solid lighten($link-color, 15%);
  color: lighten($red, 15%);
}

#intro {
  h1 {
    font-weight: 900;
  }

  a {
    color: lighten($red, 15%);
    border-bottom: none;
  }
}

.fancy-list {
  padding: 0;
  margin: 0;
  list-style: none;

  > li {
    position: relative;
    padding: 0.5rem 0;
    width: 100%;
    border-bottom: 1px dotted lighten($red, 15%);

    &:before {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      background-color: $red;
      transform: rotateX(90deg);
      transform-origin: 0 100%;
      transition: transform 0.2s ease-in-out;
      z-index: -1;
      top: 0;
    }

    &:hover {
      &:before {
        transform: rotateX(0deg);
      }
    }
  }

  .fancy-hover {
    position: relative;
    display: block;
    width: 100%;
    border-bottom: none;
    text-indent: 0;
    transition: text-indent 0.2s cubic-bezier(0.34, 1.61, 0.7, 1);
    padding-left: 0;
    overflow: hidden;

    &:before {
      position: absolute;
      content: "→";
      left: 0;
      top: 0;
      bottom: 0;
      margin: 0 auto;
      transform: translateX(-1rem);
      transition: transform 0.2s ease-in-out;
    }

    &:hover {
      text-indent: 1rem;
      padding-left: 2rem;

      &:before {
        transform: translateX(0);
      }
    }
  }
}

.subheader {
  color: rgba($white, 0.65);
}

